de locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5375 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -29,23 +29,23 @@ foxtrick.FoxtrickAlert.AlertSound.desc=Ton abspielen
 foxtrick.FoxtrickAlert.NewMail.desc=Anzeige eines Popups bei neuen Mails
 foxtrick.FoxtrickAlert.NewForum.desc=Anzeige einer Popup-Nachricht bei neuen Forennachrichten an dich (Nicht-Supporter)
 foxtrick.AlertCustomSounds.desc=Individuelle Sounds für Alerts. Bei nicht angekreuzten wird der Standardsound gespielt. Bei leeren Sounds wird kein Sound gespielt.
-foxtrick.AlertCustomSounds.LoginWelcome.desc=LoginWelcome
-foxtrick.AlertCustomSounds.LoginSupporters.desc=LoginSupporters
-foxtrick.AlertCustomSounds.ForumReplyToMe.desc=ForumReplyToMe
-foxtrick.AlertCustomSounds.TransferMarket.desc=TransferMarket
-foxtrick.AlertCustomSounds.Challenges.desc=Challenges
-foxtrick.AlertCustomSounds.Guestbook.desc=Guestbook
-foxtrick.AlertCustomSounds.MailToMe.desc=MailToMe
-foxtrick.AlertCustomSounds.MyHTMessages.desc=MyHTMessages
+foxtrick.AlertCustomSounds.LoginWelcome.desc=Willkommen
+foxtrick.AlertCustomSounds.LoginSupporters.desc=Login von Supportern
+foxtrick.AlertCustomSounds.ForumReplyToMe.desc=Forenantworten an mich
+foxtrick.AlertCustomSounds.TransferMarket.desc=Transfermarket
+foxtrick.AlertCustomSounds.Challenges.desc=Forderungen
+foxtrick.AlertCustomSounds.Guestbook.desc=Gästebuch
+foxtrick.AlertCustomSounds.MailToMe.desc=Nachricht an mich
+foxtrick.AlertCustomSounds.MyHTMessages.desc=MyHT Nachrichten
 foxtrick.AlertCustomOff.desc=Individuelles Deaktivieren von Alerts. Angekreuzte Optionen zeigen weder Alert noch wird ein Sound gespielt
-foxtrick.AlertCustomOff.LoginWelcome.desc=LoginWelcome
-foxtrick.AlertCustomOff.LoginSupporters.desc=LoginSupporters
-foxtrick.AlertCustomOff.ForumReplyToMe.desc=ForumReplyToMe
-foxtrick.AlertCustomOff.TransferMarket.desc=TransferMarket
-foxtrick.AlertCustomOff.Challenges.desc=Challenges
-foxtrick.AlertCustomOff.Guestbook.desc=Guestbook
-foxtrick.AlertCustomOff.MailToMe.desc=MailToMe
-foxtrick.AlertCustomOff.MyHTMessages.desc=MyHTMessages
+foxtrick.AlertCustomOff.LoginWelcome.desc=Willkommen
+foxtrick.AlertCustomOff.LoginSupporters.desc=Login von Supportern
+foxtrick.AlertCustomOff.ForumReplyToMe.desc=Forenantworten an mich
+foxtrick.AlertCustomOff.TransferMarket.desc=Transfermarket
+foxtrick.AlertCustomOff.Challenges.desc=Forderungen
+foxtrick.AlertCustomOff.Guestbook.desc=Gästebuch
+foxtrick.AlertCustomOff.MailToMe.desc=Nachricht an mich
+foxtrick.AlertCustomOff.MyHTMessages.desc=MyHT Nachrichten
 foxtrick.MedianTransferPrice.desc=Zeigt den Medianpreis im Transfervergleich an
 foxtrick.YouthSkillNotes.desc=Ermöglicht die Skills von Jugendspielern zu notieren und somit eine Skillanzeige wie beim A-Team
 foxtrick.YouthSkillNotes.OnlyOwnTeam.desc=Nur die SkillNotes der eigenen Jugend anzeigen
@@ -142,7 +142,9 @@ foxtrick.ForumNextAndPrevious.desc=Entfernt die 'vor' und 'zurück' Buttons fall
 foxtrick.ForumLastPost.desc=Springen zum letzten Posting eines gelesenen Threads anstelle zum ersten
 foxtrick.ForumLastPost.lastpage.desc=Springe zur letzten Seite, nicht zum letzten posting
 foxtrick.MatchPlayerColouring.desc=Spieler im Spielbericht farblich hervorheben
+foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Eigene Farben für das eigene Team
 foxtrick.MatchReportFormat.desc=Formatierung des Spielberichts in einzelne Abschnitte. Einstellungen zum Format können untenstehend vorgenommen werden.
+foxtrick.MatchReportFormat.SeparateOwnPlayerColors.desc=Eigene Farben für das eigene Team
 foxtrick.ForumRedirManagerToTeam.desc=Weiterleitung auf die Vereinsseite von den Managerlinks im Forum
 foxtrick.ManagerButtons.desc=Hinzufügen oder verändern der Managerbuttons auf Team- und Managerseiten
 foxtrick.ManagerButtons.GuestBook.desc=Hinzufügen von Links 'Gästebuch' auf der Manager-Seite und der Vereinsseite
@@ -159,22 +161,12 @@ foxtrick.ExtraPlayerInfo.CoachInfo.desc=Anzeige der Ausrichtung des aktuellen bz
 foxtrick.ExtraPlayerInfo.Flag.desc=Nationalitätenflaggen zufügen.
 foxtrick.PlayerFilters.desc=Filterauswahl auf der Spielerseite zufügen.
 foxtrick.HistoryStats.desc=Anzeige einer Zusammenfassung der Teamhistorie
-foxtrick.HistoryStats.season=Saison
-foxtrick.HistoryStats.season.short=S
-foxtrick.HistoryStats.cup=Pokalrunde
-foxtrick.HistoryStats.cup.short=P
-foxtrick.HistoryStats.league=Liga
-foxtrick.HistoryStats.league.short=L
-foxtrick.HistoryStats.pos=Endplatzierung
-foxtrick.HistoryStats.pos.short=P
-foxtrick.HistoryStats.label=History Stats
-foxtrick.HistoryStats.cupwinner=Pokalsieger
-foxtrick.HistoryStats.cupwinner.short=PS
 foxtrick.LargeFlags.desc=Anzeige großer Flaggen anstelle der kleinen
 foxtrick.GoToPostBox.desc=Hinzufügen einer 'Gehe zu Post Nummer:' - Box im Forum
 foxtrick.TeamSelectBox.desc=Anstelle der Spielerliste wird eine Selectbox zur Auswahl auf den Spielerseiten angeboten
 foxtrick.TeamSelectBox.AlsoYouthPlayers.desc=Ersetzen der Spielerliste durch eine Selectbox auch bei Jugendspielern
 foxtrick.CopyPlayerAd.desc=Fügt unter 'Aktionen' einen Button zum Kopieren der Spieleranzeige hinzu
+foxtrick.CopyPlayerAd.Sorted.desc=Skills absteigend sortiert
 foxtrick.CustomMedals.desc=Ersetzt die neuen Trophäen mit den Altbekannten
 foxtrick.SeniorTeamShortCuts.desc=Ein Link zum Trainer und letzter Aufstellung wird dem Menü des A-Teams hinzu gefügt
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Nur bei fremden Teams anzeigen
@@ -379,6 +371,19 @@ foxtrick.ExtraShortcuts.statistics=Statistiken
 foxtrick.ExtraShortcuts.transfers=Transfers
 foxtrick.ExtraShortcuts.prefs=Einstellungen
 foxtrick.ExtraShortcuts.ftprefs=FoxTrick-Einstellungen
+
+#HistoryStats
+foxtrick.HistoryStats.season=Saison
+foxtrick.HistoryStats.season.short=S
+foxtrick.HistoryStats.cup=Pokalrunde
+foxtrick.HistoryStats.cup.short=P
+foxtrick.HistoryStats.league=Liga
+foxtrick.HistoryStats.league.short=L
+foxtrick.HistoryStats.pos=Endplatzierung
+foxtrick.HistoryStats.pos.short=P
+foxtrick.HistoryStats.label=History Stats
+foxtrick.HistoryStats.cupwinner=Pokalsieger
+foxtrick.HistoryStats.cupwinner.short=PS
 
 # YouthPromoteDays
 foxtrick.youthpromotedays.prom_d=Spieler kann frühestens in
