Romanian language update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5376 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -2,6 +2,12 @@
 # utf-8 encoded
 # By slader
 
+# Hints:
+# translate the right side of the = sign.
+# don't use " in your translations.
+# the left side are idenitifiers for internal foxtrick use. leave them unchanged.
+# sentences starting with # are comments. leave them unchanged
+
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.FoxtrickLineupShortcut.desc=Adaugă o scurtatura catre primul 11 pe pagina cu istoria meciurilor a jucatorilor
@@ -55,11 +61,12 @@ foxtrick.HTDateFormat.LocalSaison.desc=Afiseaza sezonul local in locul sezonului
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Utilizeaza setari personale pentru a seta prima zi a saptamanii (0 = luni, -2 = sambata)
 foxtrick.TeamPopupLinks.desc=Afiseaza o mica fereastra pop-up cu linkuri cand tii cursorul peste un link teamid
 foxtrick.TeamPopupLinksMore.desc=Afiseaza un link 'mai multe...' in fereastra pop-up scurtaturi echipa care afiseaza la randul ei mai multe scurtaturi.
-foxtrick.StaffMarker.desc=Marcheaza nickname-urile oficialilor pe forum. in casutele text aveti posibilitatea de a defini un stil propriu (stilul HTML).
+foxtrick.StaffMarker.desc=Marcheaza nickname-urile oficialilor pe forum.
 foxtrick.StaffMarker.manager.desc=Marcheaza oficialii pe paginile echipelor.
-foxtrick.StaffMarker.own.desc=Marcari personale
+foxtrick.StaffMarker.own.desc=Marcaje personale
 foxtrick.StaffMarker.flag.desc=Adauga steaguri userilor in casuta de selectare
 foxtrick.ForumYouthIcons.desc=Afiseaza linkuri pentru academia de tineret (functioneaza si mailuri)
+foxtrick.ForumYouthIcons.q.desc=Adauga iconita pentru quote daca lipseste
 foxtrick.ForumYouthIcons.user_id.desc=Adauga iconita pentru ID-ul userului
 foxtrick.ForumYouthIcons.kit_id.desc=Adauga iconita pentru ID-ul kitului
 foxtrick.ForumYouthIcons.article_id.desc=Adauga iconita pentru ID-ul articolului de presa
@@ -137,36 +144,32 @@ foxtrick.MarkUnread.desc=Adauga un link pentru a marca toatea mesajele necitite 
 foxtrick.ForumNextAndPrevious.desc=inlatura butoanele 'Urmatorul' si 'Anteriorul' la subiectele din forumuri daca sunt dezactivate
 foxtrick.ForumLastPost.desc=Sare la ultimul mesaj in loc sa sara la primul mesaj la threadurile citite
 foxtrick.ForumLastPost.lastpage.desc=Sare la ultima pagina, nu ultimul mesaj
-foxtrick.AdvancedStarsCounter.desc=Afiseaza o statistica mai detaliata a stelelor in pagina asezarii echipei
 foxtrick.MatchPlayerColouring.desc=Coloreaza numele jucatorilor in raportul meciului in functie de echipele de care apartin
+foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Colorare separata a jucatorilor proprii
 foxtrick.MatchReportFormat.desc=Prezentare a raportului de meci linie dupa linie in functie de raport
+foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Colorare separata a propriei echipei
 foxtrick.ForumRedirManagerToTeam.desc=Redirectioneaza link-ul de la pagina managerului la pagina echipei in forumuri
 foxtrick.AddManagerButtons.desc=Adauga sau schimba butoanele pe pagina managerului sau pagina echipei
 foxtrick.ManagerButtons.GuestBook.desc=Adauga butoanele 'Scrie in cartea de oaspeti' pe pagina managerului si pagina echipei
 foxtrick.ManagerButtons.LargeSendMail.desc=Deschide casuta de mesaje mari in locul celei mici
 foxtrick.HTThreadMarker.desc=Marcheaza subiectele create de HT-i
 foxtrick.TeamStats.desc=Creaza o imagine de ansamblu a jucatorilor echipei.
+foxtrick.TeamStats.General.desc=Informatii generale (ITC/varsta)
+foxtrick.TeamStats.Speciality.desc=Specialitate
+foxtrick.TeamStats.Personality.desc=Personalitate
+foxtrick.TeamStats.Status.desc=Status (cartonase/accidentari)
+foxtrick.TeamStats.Current_league.desc=Liga actuala
 foxtrick.ExtraPlayerInfo.desc=Arata informatii suplimentare a jucatorilor pe pagina jucatorilor.
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Arata informatii despre fosti si actuali antrenori.
 foxtrick.ExtraPlayerInfo.Flag.desc=Arata nationalitatea jucatorilor sub forma de steaguri.
 foxtrick.PlayerFilters.desc=Adauga o casuta de selectare pentru a filtra jucatorii pe pagina jucatorilor.
 foxtrick.HistoryStats.desc=Realizeaza o imagine de ansablu a istoriei echipei.
-foxtrick.HistoryStats.season=Sezon
-foxtrick.HistoryStats.season.short=S
-foxtrick.HistoryStats.cup=Cupa
-foxtrick.HistoryStats.cup.short=C
-foxtrick.HistoryStats.league=Liga
-foxtrick.HistoryStats.league.short=Lig.
-foxtrick.HistoryStats.pos=Pozitie
-foxtrick.HistoryStats.pos.short=Poz
-foxtrick.HistoryStats.label=Statistici istorie
-foxtrick.HistoryStats.cupwinner=Castigator al cupei
-foxtrick.HistoryStats.cupwinner.short=Cas.c
 foxtrick.LargeFlags.desc=Mareste steagul pe pagina jucatorului daca fetele sunt folosite.
 foxtrick.GoToPostBox.desc=Adauga o casuta MergiLaX in forumuri
 foxtrick.TeamSelectBox.desc=Inlocuieste lista jucatorilor cu o casuta de selectare in pagina jucatorilor. Dand click pe header va schimba intre lista sau cauta de selectare.
 foxtrick.TeamSelectBox.AlsoYouthPlayers.desc=Adauga de asemenea o casuta de selectare in pagina jucatorilor la tineret
 foxtrick.CopyPlayerAd.desc=Un buton pe pagina jucatorului pentru a putea copia un detaliile unui jucator in clipboard (format ht-ml)
+foxtrick.CopyPlayerAd.Sorted.desc=Sorteaza calitatile in ordine descrescatoare.
 foxtrick.CustomMedals.desc=inlocuieste noile medalii Hattrick cu cele vechi
 foxtrick.SeniorTeamShortCuts.desc=Adauga link-urile 'Antrenor' si 'Ultima asezare' la echipele de seniori
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Arata doar pe paginile altor echipe
@@ -373,6 +376,19 @@ foxtrick.ExtraShortcuts.transfers=Transferuri
 foxtrick.ExtraShortcuts.prefs=Preferinte
 foxtrick.ExtraShortcuts.ftprefs=Preferinte FoxTrick
 
+#HistoryStats
+foxtrick.HistoryStats.season=Sezon
+foxtrick.HistoryStats.season.short=S
+foxtrick.HistoryStats.cup=Tur cupa
+foxtrick.HistoryStats.cup.short=C
+foxtrick.HistoryStats.league=Liga
+foxtrick.HistoryStats.league.short=Lig
+foxtrick.HistoryStats.pos=Pozitie finala in liga
+foxtrick.HistoryStats.pos.short=Pfl
+foxtrick.HistoryStats.label=Statistici istorie
+foxtrick.HistoryStats.cupwinner=Castigator cupa
+foxtrick.HistoryStats.cupwinner.short=CC
+
 # YouthPromoteDays
 foxtrick.youthpromotedays.prom_d=Jucatorul poate fi promovat in
 foxtrick.youthpromotedays.days=zile
@@ -450,6 +466,7 @@ CopyPosting.abbr=Copiaza in stilul %s
 CopyPosting.style.ht-ml=HT-ML
 CopyPosting.style.wiki=wiki
 CopyPosting.style.raw=coloana
+CopyPosting.style.last=ultima
 
 ForumYouthIcons.label=Linkuri juniori
 ForumYouthIcons.labelToolbar=Linkuri principale
@@ -458,6 +475,7 @@ ForumYouthIcons.youthteamid=Adauga link pentru ID-ul echipei de juniori
 ForumYouthIcons.youthmatchid=Adauga link pentru meciurile juniorilor
 ForumYouthIcons.youthseries=Adauga link pentru seriile de juniori
 #special bbcode, not really youth icons
+ForumSpecialBBCode.q=Adauga quote
 ForumSpecialBBCode.br=Lasa o linie pauza si sare la randul urmator
 ForumSpecialBBCode.user=Adauga link catre utilizator
 ForumSpecialBBCode.kit=Adauga id la kituri
@@ -466,6 +484,7 @@ ForumSpecialBBCode.clock=Adauga ora actuala
 ForumSpecialBBCode.spoiler=Adauga spoiler
 ForumSpecialBBCode.pre=Insereaza tag-ul format 'pre'
 ForumSpecialBBCode.table=Formatul de inserat tabele. Coverteste textul selectat intr-un tabel (Liniile sunt convertite in randuri, textele separate de %s vor fi transformate in celule)
+ForumSpecialBBCode.enterSeparator=Adauga un separator
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Introduceti numele filtrului:
@@ -696,21 +715,22 @@ foxtrick.tweaks.copyplayerad=Copiaza jucatorul in clipboard
 foxtrick.tweaks.copied=Jucatorul a fost copiat in clipboard
 HatStatsDetailed=HatStats (detaliat)
 HatStatsTotalOnly=HatStats (doar total)
-foxtrick.tweaks.copyratings=Copiaza ratingurile in clipboard(stil HT-ML)
-foxtrick.tweaks.copyratings.home=Copiaza ratingurile echipei gazda in clipboard(stil HT-ML)
-foxtrick.tweaks.copyratings.away=Copiaza ratingurile echipe vizitatoare in clipboard(stil HT-ML)
+foxtrick.tweaks.copyratings.both=Copiaza ratingurile (stil HT-ML)
+foxtrick.tweaks.copyratings.home=Copiaza ratingurile echipei gazda (stil HT-ML)
+foxtrick.tweaks.copyratings.away=Copiaza ratingurile echipe vizitatoare (stil HT-ML)
 foxtrick.tweaks.ratingscopied=Ratingurile au fost copiate in clipboard.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Copiaza raportul antrenamentului in clipboard.
 foxtrick.tweaks.copyskilltable=Copiaza tabelul cu calitatile juniorilor in clipboard (HT-ML).
 foxtrick.tweaks.copyscoutreport=Copiaza comentariul cautatorului de talente in clipboard.
-foxtrick.tweaks.copyplayerscource=Copiaza codul HTML in clipboard. (pentru youthclub)
-foxtrick.tweaks.reportcopied=Raportul antrenamentului/comentariul cautatorului de talente a fost copiat in clipboard.
+foxtrick.tweaks.scoutreportcopied=Comentariul cautatorului de talente a fost copiat in clipboard.
+foxtrick.tweaks.copyplayerscource=Copiaza codul HTML in clipboard. (pentru hattrick-youthclub.org)
+foxtrick.tweaks.trainingreportcopied=Raportul antrenamentului/comentariul cautatorului de talente a fost copiat in clipboard.
 foxtrick.tweaks.playersourcecopied=Sursa de provenienta a jucatorului a fost copiata in clipboard.
 foxtrick.tweaks.skilltablecopied=Tabelul cu calitatile jucatorilor a fost copiat in clipboard.
 foxtrick.tweaks.matchidcopied=Id-ul meciului a fost copiat in clipboard.
-foxtrick.tweaks.postidcopied=Id-ul mesajul din forum a fost copiat in clipboard.
-foxtrick.tweaks.postingcopied=Mesajul in curs de postare a fost copiat in clipboard.
+foxtrick.tweaks.postidcopied=Id-ul [post=%s] a fost copiat in clipboard.
+foxtrick.tweaks.postingcopied=Mesajul %s a fost copiat in clipboard.
 
 #matches
 foxtrick.matches.attackdefensebars=Atac vs Aparare
