--- a/content/locale/es_ca/foxtrick.properties
+++ b/content/locale/es_ca/foxtrick.properties
@@ -1,6 +1,13 @@
-# Español Centroamericano
+﻿# Español Centroamericano
 # By baler0
 # es-MX, es-CO, es-GT, es-CR, es-BO, es-EC, es-SV, es-PR
+
+# Hints:
+# translate the right side of the = sign.
+# don't use " in your translations.
+# the left side are idenitifiers for internal foxtrick use. leave them unchanged.
+# sentences starting with # are comments. leave them unchanged
+
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
@@ -23,7 +30,7 @@ foxtrick.AttVsDef.oldstyleifkseparated.desc=Estilo antiguo (tiros indirectos rep
 foxtrick.Ratings.desc=Añadir calificaciones en la página del partido
 foxtrick.BookmarkAdjust.desc=Cambiar el icono asociado a favoritos, insertando en el comentario del favorito el código correspondiente entre corchetes: Ej. [cyan] mostrará el icono de color 'cyan'. Posible valores: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
 foxtrick.FoxtrickAlert.desc=Mostrar una ventana emergente de notificación con las noticias de Hattrick
-foxtrick.FoxtrickAlert.AlertSlider.desc=Mostrar alerta 
+foxtrick.FoxtrickAlert.AlertSlider.desc=Mostrar alerta
 foxtrick.FoxtrickAlert.AlertSliderGrowl.desc=Mostrar notificación grwl (Solo Mac)
 foxtrick.FoxtrickAlert.AlertSound.desc=Reproducir alerta de sonido
 foxtrick.FoxtrickAlert.NewMail.desc=Mostrar una notificación al recibir un nuevo ht-mail (no-supporter)
@@ -56,9 +63,9 @@ foxtrick.TransferDeadline.desc=Añade una línea extra dentro de cada resultado 
 foxtrick.HTDateFormat.desc=Añade las fechas más importantes de la semana y temporada global / localemente dentro de las páginas de HT
 foxtrick.HTDateFormat.LocalSaison.desc=Muestra la temporada local en lugar de la temporada global
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Usar una configuración personal, fijando el primer día de la semana (0 = lunes/predeterminado, -2 = sábado)
-foxtrick.TeamPopupLinks.desc=Muestra una pequeña ventana emergente con atajos, cuando se situa el cursor por encima del enlace a un equipo 
+foxtrick.TeamPopupLinks.desc=Muestra una pequeña ventana emergente con atajos, cuando se situa el cursor por encima del enlace a un equipo
 foxtrick.TeamPopupLinksMore.desc=Muestra un enlace 'Más...' situando el cursor por ecima del enlace a un equipo, que revela más atajos
-foxtrick.StaffMarker.desc=Resaltar los nicks de miembros del staff dentro de la conferencia y página del equipo. 
+foxtrick.StaffMarker.desc=Resaltar los nicks de miembros del staff dentro de la conferencia y página del equipo.
 foxtrick.StaffMarker.manager.desc=Resaltar los nicks de miembros del staff en la página del equipo
 foxtrick.StaffMarker.own.desc=Marcadores personales
 foxtrick.StaffMarker.flag.desc=Añade banderas a los usuarios dentro de la caja de selección
@@ -76,8 +83,8 @@ foxtrick.ForumYouthIcons.youth_series.desc=Añade un icono para el ID de la liga
 foxtrick.ForumYouthIcons.enlarge_input.desc=Agranda las cajas de texto para mejorar la escritura
 foxtrick.ForumYouthIcons.pre.desc=Añade un icono para el pre-formato del foro
 foxtrick.ForumYouthIcons.table.desc=Añade un icono para tabla
-foxtrick.FormatPostingText.desc=Reemplaza las etiquetas HT-ML de Foxtrick por etiquetas HTML-Tags 
-foxtrick.CopyPostID.desc=Enlace para copiar el PostId.
+foxtrick.FormatPostingText.desc=Reemplaza las etiquetas HT-ML de Foxtrick por etiquetas HTML-Tags
+foxtrick.CopyPostID.desc=Enlace para copiar el PostId
 foxtrick.CopyPostID.AddCopyIcon.desc=Añade un icono para copiar el ID antes del primer postID
 foxtrick.CopyPosting.desc=Añade un icono para copiar el mensaje incluyendo referencias
 foxtrick.ShowForumPrefButton.desc=Muestra un atajo a las preferencias del foro en todas las páginas del foro
@@ -109,7 +116,7 @@ foxtrick.LinksAchievements.desc=Añadir algunos enlaces externos a la página de
 foxtrick.LinksStaff.desc=Añadir algunos enlaces externos a la página del Staff
 foxtrick.LinksTracker.desc=Añadir algunos enlaces externos a las correspondientes bases de datos nacionales dentro detro de las páginas de jugadores y selecciones.
 foxtrick.LinksClubTransfers.desc=Añadir algunos enlaces externos a la página de Transferencias
-foxtrick.ForumAlterHeaderLine.desc=Altera el encabezado de los mensajes 
+foxtrick.ForumAlterHeaderLine.desc=Altera el encabezado de los mensajes
 foxtrick.Singleline2.desc=Modulo con encabezado del foro alternativo de una línea. Un poco más rapido que las otras versiones. Deshabilita algunos mensajes del foro conflictivos.
 # please translate next lines again if needed
 foxtrick.ForumAlterHeaderLine.SingleHeaderLine.desc=Muestra el encabezado del foro en 1 sola línea. Esta opción puede romper el diseño del foro. Si experimentas eso, usa el skin nromal, elimina los numeros de las banderas en el encabezado o activa algunas de las siguientes funciones.
@@ -141,7 +148,9 @@ foxtrick.ForumNextAndPrevious.desc=Eliminar los botones de 'Siguiente' y 'Anteri
 foxtrick.ForumLastPost.desc=Saltar al ultimo mensaje en lugar de saltar al primer mensaje de un tema ya leído
 foxtrick.ForumLastPost.lastpage.desc=Saltar a la última página, no al ultimo mensaje
 foxtrick.MatchPlayerColouring.desc=Colorear los nombres de los jugadores dependiendo de su equipo en el reporte del partido. Usando enlaces en la página del jugador, resalta al jugador solamente.
+foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separar el coloreado del jugador propio
 foxtrick.MatchReportFormat.desc=Presentación del reporte del partido línea por línea, de acuerdo a los eventos del partido.
+foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Separate el coloreado del equipo propio
 foxtrick.ForumRedirManagerToTeam.desc=Redirige, el enlace del foro, de la página del mánager a la página del usuario/equipo.
 foxtrick.ManagerButtons.desc=Añade o cambia los botones en las páginas del manager y del equipo
 foxtrick.ManagerButtons.GuestBook.desc=Añade un enlace para Escribir en el Libro de Visitas dentro de la página del manage y la página del equipo
@@ -168,12 +177,13 @@ foxtrick.HistoryStats.pos=Posición final en la Liga
 foxtrick.HistoryStats.pos.short=P
 foxtrick.HistoryStats.label=Estadísticas del Historial
 foxtrick.HistoryStats.cupwinner=Ganador Copa
-foxtrick.HistoryStats.cupwinner.short=CW
+foxtrick.HistoryStats.cupwinner.short=GC
 foxtrick.LargeFlags.desc=Aumentar el tamaño de la bandera del país en la página del jugador si las caras se muestran.
 foxtrick.GoToPostBox.desc=Añadir una ventana 'Ir al Mensaje' dentro de la conferencia
 foxtrick.TeamSelectBox.desc=Reemplaza la lista de jugadores por un cuadro de selección
-foxtrick.TeamSelectBox.AlsoYouthPlayers.desc=También remplaza la lista de jugadores por una caja de selección, en la página de jugadores del Equipo juvenil
+foxtrick.TeamSelectBox.AlsoYouthPlayers.desc=También reemplaza la lista de jugadores por una caja de selección, en la página de jugadores del Equipo juvenil
 foxtrick.CopyPlayerAd.desc=Añade en la página del jugador, que permite copiar su información (en HT-ML)
+foxtrick.CopyPlayerAd.Sorted.desc=Ordenar las habilidades en orden descendente
 foxtrick.CustomMedals.desc=Reemplaza las medallas del nuevo diseño de Hattrick, por las medallas del diseño antiguo
 foxtrick.SeniorTeamShortCuts.desc=Añade enlaces a Entrenador y Última Alineación de la página del equipo
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Mostrar unicamente en la página de otros equipos
@@ -213,13 +223,13 @@ foxtrick.ForumPresentation.Forum_Link_Grey_Icons.desc=Muestra iconos en lugar de
 foxtrick.ForumPresentation.moved_avatarinfo_fix.desc=Arregla la descolocación del avatar e información cuando el encabezado del mensaje se llena
 foxtrick.HeaderFix.RemoveFlicker.desc=Reduce el parpadeo dentro de los foros usando un cambio en el encabezado con Firefox 3.5
 foxtrick.SkinPlugin.desc=Añade tu propio skin CSS para Hattrick
-foxtrick.SkinPlugin.Skin1.desc=Activar skin 1 
-foxtrick.SkinPlugin.Skin2.desc=Activar skin 2 
+foxtrick.SkinPlugin.Skin1.desc=Activar skin 1
+foxtrick.SkinPlugin.Skin2.desc=Activar skin 2
 foxtrick.CurrencyConverter.desc=Convierte una moneda/divisa dentro de Hattrick
 foxtrick.MovePlayerStatement.desc=Coloca las declaraciones del jugador en la imagen del mismo. Si las imágenes estan deshabilitadas, las declaraciones se eliminaran.
 foxtrick.TickerColoring.desc=Añade color a las notificaciones de Hattrick.
 foxtrick.TickerColoring.LoginWelcome.desc=Color perzonalizado Login de Bienvenida
-foxtrick.TickerColoring.LoginSupporters.desc=Color perzonalizado  Login de equipos seguidos
+foxtrick.TickerColoring.LoginSupporters.desc=Color perzonalizado Login de equipos seguidos
 foxtrick.TickerColoring.ForumReplyToMe.desc=Color perzonalizado Mensajes del Foro
 foxtrick.TickerColoring.TransferMarket.desc=Color perzonalizado Transferencia Mercado
 foxtrick.TickerColoring.Challenges.desc=Color perzonalizado para Amistosos
@@ -238,7 +248,7 @@ foxtrick.ExtraShortcuts.HtRadioWinamp.desc=Enlace a Hattrick Radio (Bélgica/Hol
 foxtrick.ExtraShortcuts.HtRadioMediaPlayer.desc=Enlace a Hattrick Radio (Bélgica/Holanda) (Windows Media Player)
 foxtrick.ExtraShortcuts.DTRadioWinamp.desc=Enlace a Radio downtime (DACHL) (Winamp)
 foxtrick.CopyMatchID.desc=Copia el ID del partido al dar clic en el icono de liga/copa/amistoso de los partidos o en el archivo de partidos. Para supporters funciona también en la página de Cara a Cara
-foxtrick.HeaderFix.desc=Arregla el encabezado mientras se navega (afecta otras páginas de HT)
+foxtrick.HeaderFix.desc=Mantiene fijo el encabezado mientras se navega (afecta otras páginas de HT)
 foxtrick.HeaderFix.FixLeft.desc=También arregla el submenú mientras se desplaza la página
 foxtrick.CopyRatings.desc=Añade enlaces dentro del reporte del partido para copiar las calificaciones (en HT-ML)
 foxtrick.GoaldifferenceToTables.desc=Añade una columna con diferencia de goles, dentro de la tabla de promoción, al igual que en las tablas de liga pasadas.
@@ -297,7 +307,7 @@ foxtrick.TeamPopupLinksMore.Challenge.desc=Enlace para Retar
 foxtrick.TeamPopupLinks.Achievements.desc=Enlace a Logros
 foxtrick.TeamPopupLinksMore.Achievements.desc=Enlace a Logros
 foxtrick.TeamPopupLinks.TransferHistory.desc=Enlace al Historial de Transferencias
-foxtrick.TeamPopupLinksMore.TransferHistory.desc=Enlace al Historial de Transferencias 
+foxtrick.TeamPopupLinksMore.TransferHistory.desc=Enlace al Historial de Transferencias
 foxtrick.TeamPopupLinks.TeamHistory.desc=Enlace al Historial del Club
 foxtrick.TeamPopupLinksMore.TeamHistory.desc=Enlace al Historial del Club
 foxtrick.TeamPopupLinks.LastLineup.desc=Enlace a la Última Alineación
@@ -345,6 +355,7 @@ foxtrick.CountryList.HideFlagOntop.desc=Remueve la imagen a la liga en la págin
 foxtrick.MatchTables.desc=Elimina el espacio en blanco en la tabla de partidos para el diseño simple
 foxtrick.MatchTables.RemoveTime.desc=Elimina la hora del partido dentro de la tabla de partidos actuales
 foxtrick.YouthPromotes.desc=Muestra los días para promocionar a un jugador juvenil
+foxtrick.htmsStatistics.desc=Añade estadísticas sobre el marcador en el partido
 foxtrick.HighlightBotTeams.desc=Resalta los equipos 'bots' y sin dueño en la página de la liga
 foxtrick.LastLogin.desc=Muestra el tiempo desde la última conexión en la página del mánager
 foxtrick.TransferCompareSort.desc=Dando clic en el encabezado, ordena los resultados del Comparador de Transferencias por TSI, precio o forma
@@ -363,7 +374,7 @@ foxtrick.YouthSeriesEstimation.desc=En la tabla de resultados de búzqueda,estim
 foxtrick.LocalTime.desc=Muestra de manera opcional la hora local en lugar de la hora de Hattrick. Dando clic en el reloj, se cambia entre ambas opciones.
 foxtrick.LocalTime.DefaultLocal.desc=Muestra la hora local de manera predeterminada.
 foxtrick.ForumThreadAutoIgnore.desc=Automáticamente ignorar temas del foro con las etiquetas seleccionadas (temas con [Etiqueta] o {Etiqueta})
-foxtrick.ForumThreadAutoIgnore.Tags.desc=Lista de etiquetas, ej: NT, idea, Bug.  Serparadas por coma, sin importar mayúsculas o minúsculas
+foxtrick.ForumThreadAutoIgnore.Tags.desc=Lista de etiquetas, ej: NT, idea, Bug. Serparadas por coma, sin importar mayúsculas o minúsculas
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lista de temas aceptados por ID (solo la parte antes del punto). Los temas en la lista de aceptados no será ignorada. Separados por coma.
 foxtrick.TableSort.desc=Convierte las tablas 'propiamente realizadas' ordenables, cuando cuenten con encabezado (incluyendo las tablas en los mensajes del foro)
 
@@ -377,7 +388,7 @@ foxtrick.ExtraShortcuts.statistics=Estadísticas
 foxtrick.ExtraShortcuts.transfers=Transferencias
 foxtrick.ExtraShortcuts.prefs=Preferencias
 foxtrick.ExtraShortcuts.ftprefs=Preferencias de FoxTrick
- 
+
 # YouthPromoteDays
 foxtrick.youthpromotedays.prom_d=El jugador puede ser promocionado en
 foxtrick.youthpromotedays.days=días.
@@ -450,7 +461,7 @@ sendmessage=Enviar
 
 #Forums
 foxtrick.CopyPostID=Copiar al Portapapeles el ID del mensaje
-CopyPosting=Copiar mensaje en estilo %s 
+CopyPosting=Copiar mensaje en estilo %s
 CopyPosting.abbr=Copiar en estilo %s
 CopyPosting.style.ht-ml=HT-ML
 CopyPosting.style.wiki=wiki
@@ -470,7 +481,7 @@ ForumSpecialBBCode.kit=Añadir ID del kit
 ForumSpecialBBCode.article=Añadir artículo
 ForumSpecialBBCode.clock=Añadir hora actual
 ForumSpecialBBCode.spoiler=Añadir spoiler
-ForumSpecialBBCode.pre=Añadir etiqueta de formato 'pre' 
+ForumSpecialBBCode.pre=Añadir etiqueta de formato 'pre'
 ForumSpecialBBCode.table=Insertar etiquetas de formato para tabla para convertir el texto seleccionado en tabla (Las líneas se convierten en filas. El texto separado por "%s" será convertido en celdas).
 ForumSpecialBBCode.tableSeparator=Convertir "%s" a celdas
 ForumSpecialBBCode.enterSeparator=Introducir separador personalizado
@@ -654,24 +665,24 @@ foxtrick.tweaks.BirthdayNextWeek=Próxima semana
 foxtrick.copymatchid=Clic para copiar el matchID al portapapeles
 foxtrick.ExtendedPlayerDetails.perseason=/ temporada
 
-foxtrick.defensiveTrainer=Un  entrenador %s de mentalidad defensiva
+foxtrick.defensiveTrainer=Un entrenador %s de mentalidad defensiva
 foxtrick.offensiveTrainer=Un entrenador %s de mentalidad ofensiva.
 foxtrick.balancedTrainer=Un entrenador %s que no es ni ofensivo ni defensivo.
 
 foxtrick.onpagepreferences=Preferencias FoxTrick en la página
 foxtrick.modules_allpages=Módulos que se ejecutan en todas las páginas
 HTLanguageChanged=Has seleccionado en las preferencias de Foxtrick, que el idioma de Foxtrick se adapte automáticamente cuando escojas otro idiona en HT. El idioma de Foxtrick es:
-NewOrChangedModules=Los siguientes módulos son nuevos o han cambiado desde 
+NewOrChangedModules=Los siguientes módulos son nuevos o han cambiado desde
 Screenshot=Captura de pantalla de las caracteristicas del módulo
 PreferenceScreenshot=Captura de pantalla de las respectivas preferencias de Foxtrick
 FoxtrickMyHtScreenshotList=Lista completa de capturas de pantalla comentadas (En Inglés)
 FoxtrickChangeLogHint=Coloca tu cursor sobre el icono '!' para ver el último cambio (En Inglés).
 FoxtrickMyHtSetChanged=Ajustar las preferencias de nuevas características ahora
-#  NOTE TO TRANSLATORS 
+# NOTE TO TRANSLATORS
 # You can use the following string to link to release notes in your language. The link better be generic, as you might not translate before actual release, i.e. link should be valid for all releases
 FoxtrickMyHtReleaseNotes=Notas Lanzamiento (En Inglés):
 FoxtrickMyHtReleaseNotesLink=http://www.ht-foxtrick.com/forum/viewforum.php?f=7
-#  NOTE TO TRANSLATORS
+# NOTE TO TRANSLATORS
 # You can use the following string to link to a topic on Hattrick Forum in your language. In that case translate the string and replace 'languages' with your own language and add relative path to the forum topic in your national forum (go to your forum topic and copy link without 'http://www**.hattrick.org')
 FoxtrickMyHtHelpPage=Foro de Ayuda de Hattrick (Inglés, Alemán, Español e Italiano):
 FoxtrickMyHtHelpPageLink=/Forum/Read.aspx?t=13254684
@@ -711,7 +722,7 @@ foxtrick.tweaks.copyskilltable=Copiar la tabla de habilidades al portapapeles (c
 foxtrick.tweaks.copyscoutreport=Copiar el reporte del scout al portapapeles
 foxtrick.tweaks.scoutreportcopied=El comentario del scout ha sido copiado al portapapeles
 foxtrick.tweaks.copyplayerscource=Copiar código del jugador al portapapeles (pusado en hattrick-youthclub.org
-foxtrick.tweaks.reportcopied=El reporte del entrenamiento/scout ha sido copiado al portapapeles
+foxtrick.tweaks.trainingreportcopied=El reporte del entrenamiento/scout ha sido copiado al portapapeles
 foxtrick.tweaks.playersourcecopied=El código fuente del jugador ha sido copiado al portapapeles
 foxtrick.tweaks.skilltablecopied=El código de la tabla de habilidades ha sido copiada al portapapeles
 foxtrick.tweaks.matchidcopied=El ID del partido ha sido copiado al portapapeles.
@@ -729,7 +740,7 @@ foxtrick.matches.indfreekick=Tiro Indirecto
 foxtrick.matches.wronglang=Foxtrick: No se pueden mostrar las estadísticas porque tu idioma no está registrado o las preferencias del idioma son incorrectas
 
 # NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
+# Look on your Matches page (Club -> Matches -> pick a match) to the lowest right box title to see how you should translate the string below
 foxtrick.matches.suppstats=Estadíticas de Supporter
 # Look on your Matches page: copy the header of the sold seats box
 foxtrick.matches.soldseats=Localidades vendidas
@@ -916,25 +927,3 @@ foxtrick.prefs.DisplayHTMLDebugOutput=Show additional debug output on Hattrick p
 
 
 ###EOF
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
