es_su locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5403 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es_SU/foxtrick.properties
+++ b/content/locale/es_SU/foxtrick.properties
@@ -141,7 +141,9 @@ foxtrick.ForumNextAndPrevious.desc=Eliminar los botones de 'Siguiente' y 'Anteri
 foxtrick.ForumLastPost.desc=Saltar al ultimo mensaje en lugar de saltar al primer mensaje de un tema ya leído
 foxtrick.ForumLastPost.lastpage.desc=Saltar a la última página, no al ultimo mensaje
 foxtrick.MatchPlayerColouring.desc=Colorear los nombres de los jugadores dependiendo de su equipo en el reporte del partido. Usando enlaces en la página del jugador, resalta al jugador solamente.
+foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separar el coloreado del jugador propio
 foxtrick.MatchReportFormat.desc=Presentación del reporte del partido línea por línea, de acuerdo a los eventos del partido.
+foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Separate el coloreado del equipo propio
 foxtrick.ForumRedirManagerToTeam.desc=Redirige, el enlace del foro, de la página del mánager a la página del usuario/equipo.
 foxtrick.ManagerButtons.desc=Añade o cambia los botones en las páginas del manager y del equipo
 foxtrick.ManagerButtons.GuestBook.desc=Añade un enlace para Escribir en el Libro de Visitas dentro de la página del manage y la página del equipo
@@ -168,12 +170,13 @@ foxtrick.HistoryStats.pos=Posición final en la Liga
 foxtrick.HistoryStats.pos.short=P
 foxtrick.HistoryStats.label=Estadísticas del Historial
 foxtrick.HistoryStats.cupwinner=Ganador Copa
-foxtrick.HistoryStats.cupwinner.short=CW
+foxtrick.HistoryStats.cupwinner.short=GC
 foxtrick.LargeFlags.desc=Aumentar el tamaño de la bandera del país en la página del jugador si las caras se muestran.
 foxtrick.GoToPostBox.desc=Añadir una ventana 'Ir al Mensaje' dentro de la conferencia
 foxtrick.TeamSelectBox.desc=Reemplaza la lista de jugadores por un cuadro de selección
 foxtrick.TeamSelectBox.AlsoYouthPlayers.desc=También remplaza la lista de jugadores por una caja de selección, en la página de jugadores del Equipo juvenil
 foxtrick.CopyPlayerAd.desc=Añade en la página del jugador, que permite copiar su información (en HT-ML)
+foxtrick.CopyPlayerAd.Sorted.desc=Ordenar las habilidades en orden descendente
 foxtrick.CustomMedals.desc=Reemplaza las medallas del nuevo diseño de Hattrick, por las medallas del diseño antiguo
 foxtrick.SeniorTeamShortCuts.desc=Añade enlaces a Entrenador y Última Alineación de la página del equipo
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Mostrar unicamente en la página de otros equipos
@@ -238,7 +241,7 @@ foxtrick.ExtraShortcuts.HtRadioWinamp.desc=Enlace a Hattrick Radio (Bélgica/Hol
 foxtrick.ExtraShortcuts.HtRadioMediaPlayer.desc=Enlace a Hattrick Radio (Bélgica/Holanda) (Windows Media Player)
 foxtrick.ExtraShortcuts.DTRadioWinamp.desc=Enlace a Radio downtime (DACHL) (Winamp)
 foxtrick.CopyMatchID.desc=Copia el ID del partido al dar clic en el icono de liga/copa/amistoso de los partidos o en el archivo de partidos. Para supporters funciona también en la página de Cara a Cara
-foxtrick.HeaderFix.desc=Arregla el encabezado mientras se navega (afecta otras páginas de HT)
+foxtrick.HeaderFix.desc=Mantiene fijo el encabezado mientras se navega (afecta otras páginas de HT)
 foxtrick.HeaderFix.FixLeft.desc=También arregla el submenú mientras se desplaza la página
 foxtrick.CopyRatings.desc=Añade enlaces dentro del reporte del partido para copiar las calificaciones (en HT-ML)
 foxtrick.GoaldifferenceToTables.desc=Añade una columna con diferencia de goles, dentro de la tabla de promoción, al igual que en las tablas de liga pasadas.
@@ -345,6 +348,7 @@ foxtrick.CountryList.HideFlagOntop.desc=Remueve la imagen a la liga en la págin
 foxtrick.MatchTables.desc=Elimina el espacio en blanco en la tabla de partidos para el diseño simple
 foxtrick.MatchTables.RemoveTime.desc=Elimina la hora del partido dentro de la tabla de partidos actuales
 foxtrick.YouthPromotes.desc=Muestra los días para promocionar a un jugador juvenil
+foxtrick.htmsStatistics.desc=Añade estadísticas sobre el marcador en el partido
 foxtrick.HighlightBotTeams.desc=Resalta los equipos 'bots' y sin dueño en la página de la liga
 foxtrick.LastLogin.desc=Muestra el tiempo desde la última conexión en la página del mánager
 foxtrick.TransferCompareSort.desc=Dando clic en el encabezado, ordena los resultados del Comparador de Transferencias por TSI, precio o forma
@@ -709,7 +713,7 @@ foxtrick.tweaks.copyskilltable=Copiar la tabla de habilidades al portapapeles (c
 foxtrick.tweaks.copyscoutreport=Copiar el reporte del scout al portapapeles
 foxtrick.tweaks.scoutreportcopied=El comentario del scout ha sido copiado al portapapeles
 foxtrick.tweaks.copyplayerscource=Copiar código del jugador al portapapeles (pusado en hattrick-youthclub.org)
-foxtrick.tweaks.reportcopied=El reporte del entrenamiento/scout ha sido copiado al portapapeles
+foxtrick.tweaks.trainingreportcopied=El reporte del entrenamiento/scout ha sido copiado al portapapeles
 foxtrick.tweaks.playersourcecopied=El código fuente del jugador ha sido copiado al portapapeles
 foxtrick.tweaks.skilltablecopied=El código de la tabla de habilidades ha sido copiada al portapapeles
 foxtrick.tweaks.matchidcopied=El ID del partido ha sido copiado al portapapeles.
