fi locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5404 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -60,9 +60,10 @@ foxtrick.TeamPopupLinks.desc=Tuo esiin pienen pop-up ikkunan pikalinkeillä jouk
 foxtrick.TeamPopupLinksMore.desc=Näyttää 'lisää...' linkin JoukkuePopup linkkilaatikossa, joka paljastaa 'lisää' oikopolkuja.
 foxtrick.StaffMarker.desc=Merkkaa virkamiesten nimimerkit foorumilla ja joukkueen sivulla.
 foxtrick.StaffMarker.manager.desc=Merkkaa virkamiesten nimimerkit seurasivulla.
-foxtrick.StaffMarker.own.desc=Henkilökohtaiset merkkaukset
+foxtrick.StaffMarker.own.desc=Henkilökohtaiset merkkaukset (format with own userids): userId=1000 userId=1001 style='color:yellow !important;' userId=1002 style='background-color:yellow;)
 foxtrick.StaffMarker.flag.desc=Lisää liput käyttäjille valikkolaatikossa
 foxtrick.ForumYouthIcons.desc=Tuo linkkipalkin juniorijoukkuetta varten foorumiin (Toimii myös posteille)
+foxtrick.ForumYouthIcons.q.desc=Lisää ikoni lainaus-tagille jos puuttuu
 foxtrick.ForumYouthIcons.user_id.desc=Lisää käyttäjäID ikoni
 foxtrick.ForumYouthIcons.kit_id.desc=Lisää ikoni peliasuID:lle
 foxtrick.ForumYouthIcons.article_id.desc=Lisää ikoni artikkeliID:lle
@@ -75,7 +76,7 @@ foxtrick.ForumYouthIcons.youth_match.desc=Lisää ikoni junioriotteluID:lle
 foxtrick.ForumYouthIcons.youth_series.desc=Lisää ikoni juniorisarjaID:lle
 foxtrick.ForumYouthIcons.enlarge_input.desc=Laajentaa tekstilaatikkoa paremman kirjoitusmukavuuden vuoksi.
 foxtrick.ForumYouthIcons.pre.desc=Lisää ikoni foorumin 'pre' formaatille
-foxtrick.ForumYouthIcons.table.desc=Lisää ikoni taulukolle
+foxtrick.ForumYouthIcons.table.desc=Lisää ikoni taulukolle. Custom tag accepts regular expresions (Mask \ with additional \, eg \\.).
 foxtrick.ShowMessageButton.desc=Lisää 'Lähetä Viesti' toiminto managerisivulle
 foxtrick.FormatPostingText.desc=Korvaa FoxTrick HT-ML-Tagit HTML-Tageihin (i.E. 'pre' elementti)
 foxtrick.CopyPostID.desc=ViestiId muutokset. Helpottaa foorumissa, kun haluat nopeasti kopioida ViestiIDn.
@@ -141,7 +142,9 @@ foxtrick.ForumNextAndPrevious.desc=Poista 'Seuraava' ja 'Edellinen' napit foorum
 foxtrick.ForumLastPost.desc=Hyppää viimeiseen viestiin ensimmäisen sijaan jo luetuissa puissa
 foxtrick.ForumLastPost.lastpage.desc=Hyppää viimeiselle sivulle, ei viimeiseen viestiin
 foxtrick.MatchPlayerColouring.desc=Korostaa pelaajan riippuen joukkueestaan otteluraportissa. Kun käytät linkkiä pelaajan sivulla, se korostaa vain tämän pelaajan.
+foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separate own player coloring
 foxtrick.ForumRedirManagerToTeam.desc=Uudelleenohjaa linkit managerin sivulta käyttäjän joukkuesivulle foorumin linkeissä
+foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Separate own team coloring
 foxtrick.ManagerButtons.desc=Lisää tai vaihda manageritoiminnot managerin tai joukkueen sivulla
 foxtrick.ManagerButtons.GuestBook.desc=Lisää 'Lähetä viesti' ja 'Kirjoita vieraskirjaan' toiminnot managerisivulle
 foxtrick.ManagerButtons.LargeSendMail.desc=Avaa laajempi viestilaatikko pienemmän sijaan
@@ -157,22 +160,12 @@ foxtrick.ExtraPlayerInfo.Flag.desc=Näytä pelaajien kansallisuudet lisäämäll
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Lisää lisätietoa nykyisistä ja aikaisemmista valmentajista.
 foxtrick.PlayerFilters.desc=Lisää valintalaatikko pelaajasivulle seulotaksesi pelaajia.
 foxtrick.HistoryStats.desc=Laatii yleiskatsauksen joukkueen historiasta.
-foxtrick.HistoryStats.season=Kausi
-foxtrick.HistoryStats.season.short=K
-foxtrick.HistoryStats.cup=Cup kierros
-foxtrick.HistoryStats.cup.short=C
-foxtrick.HistoryStats.league=Sarja
-foxtrick.HistoryStats.league.short=Sarja
-foxtrick.HistoryStats.pos=Sijoitus sarjassa
-foxtrick.HistoryStats.pos.short=Sija
-foxtrick.HistoryStats.label=Historia tilastot
-foxtrick.HistoryStats.cupwinner=Cup voittaja
-foxtrick.HistoryStats.cupwinner.short=CV
 foxtrick.LargeFlags.desc=Laajentaa liput pelaajasivuilla, jos pelaajien naamat on näkyvillä.
 foxtrick.GoToPostBox.desc=Lisää GoToPostX laatikko foorumiin
 foxtrick.TeamSelectBox.desc=Korvaa pelaajalistan valikkolaatikolla pelaajasivulla. Yleiskatsaus-Headeria klikkaamaalla kytket päälle pelaajalistan/valikkolaatikon takaisin päälle.
 foxtrick.TeamSelectBox.AlsoYouthPlayers.desc=Korvaa pelaajalistan valikkolaatikolla junioripelaajien yleiskatsauksessa.
 foxtrick.CopyPlayerAd.desc=Lisää painikkeen pelaajan sivulle kopioidaksesi pelaajan tiedot(in HT-ML).
+foxtrick.CopyPlayerAd.Sorted.desc=Lajittele taidot laskevassa järjestyksessä.
 foxtrick.CustomMedals.desc=Korvaa Hattrickin uudet mitalit vanhan tyylin mitaleilla
 foxtrick.SeniorTeamShortCuts.desc=Lisää edustusjoukkueen sivulle linkit viimeisimpään kokoonpanoon ja valmentajalle.
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Näytä linkit vain muiden joukkueiden sivuilla
@@ -291,6 +284,7 @@ foxtrick.CountryList.HideFlagOntop.desc=Poistaa kuvalinkin (lippu) liigan yleisk
 foxtrick.MatchTables.desc=Poistaa tyhjää tilaa ottelutauluissa yksinkertaisessa ulkoasussa
 foxtrick.MatchTables.RemoveTime.desc=Poistaa ottelun ajan nykyisissä ottelutauluissa
 foxtrick.YouthPromotes.desc=Näyttää päivät siitä milloin voit nostaa junioripelaajan edustukseen
+foxtrick.htmsStatistics.desc=Lisää tilastoja otteluiden maalitulokseen.
 foxtrick.PredefinedChallenges.desc=Tallentaa viimeisimmät asetukset haasteissa ja täyttää valikkolaatikot niillä asetuksilla, kun teet haastetta.
 foxtrick.HighlightBotTeams.desc=Korosta 'botit' sekä joukkueet ilman manageria sarjasivulla
 foxtrick.LastLogin.desc=Näyttää käyttäjän sivulla ajan siitä milloin käyttäjä on viimeksi kirjautunut
@@ -326,6 +320,19 @@ foxtrick.ExtraShortcuts.statistics=Tilastot
 foxtrick.ExtraShortcuts.transfers=Siirrot
 foxtrick.ExtraShortcuts.prefs=Asetukset
 foxtrick.ExtraShortcuts.ftprefs=FoxTrick-asetukset
+
+#HistoryStats
+foxtrick.HistoryStats.season=Kausi
+foxtrick.HistoryStats.season.short=K
+foxtrick.HistoryStats.cup=Cup kierros
+foxtrick.HistoryStats.cup.short=C
+foxtrick.HistoryStats.league=Sarja
+foxtrick.HistoryStats.league.short=Sarja
+foxtrick.HistoryStats.pos=Sijoitus sarjassa
+foxtrick.HistoryStats.pos.short=Sija
+foxtrick.HistoryStats.label=Historia tilastot
+foxtrick.HistoryStats.cupwinner=Cup voittaja
+foxtrick.HistoryStats.cupwinner.short=CV
 
 # YouthPromoteDays
 foxtrick.youthpromotedays.prom_d=Pelaajan voi nostaa aikaisintaan
@@ -412,6 +419,7 @@ ForumYouthIcons.youthteamid=Lisää juniorijoukkue -tagi
 ForumYouthIcons.youthmatchid=Lisää linkki junioriotteluun
 ForumYouthIcons.youthseries=Lisää linkki juniorisarjaan
 #special bbcode, not really youth icons
+ForumSpecialBBCode.q=Lisää lainaus
 ForumSpecialBBCode.br=Lisää riviväli
 ForumSpecialBBCode.user=Lisää käyttäjäID
 ForumSpecialBBCode.kit=Lisää peliasuID
@@ -625,7 +633,7 @@ FoxtrickMyHtHelpPage=FoxTrick Apufoorumi (Suomi/English/Svenska):
 FoxtrickMyHtHelpPageLink=/Forum/Read.aspx?t=12451577
 
 StyleTutorial.title=Styling FoxTrick
-StyleTutorial.content=FoxTrick provides a set of presentation interfaces for users to customise their own styles.\nThese interfaces are provided through HTML ids and classes, and you can use CSS to define your preferred style.\nAn example user style file can be found at %s, and you can modify it to satisfy your need.\nAfter saving the file, you can use the SkinPlugin module of FoxTrick to load the CSS file in order to have the user style in effect.
+StyleTutorial.content=FoxTrick provides a set of presentation interfaces for users to customise their own styles.\nThese interfaces are provided through HTML ids and classes, and you can use CSS to define your preferred style.\nAn example user style file can be found at %s, which you can modify to satisfy your need.\nIf you have problem with the link, copy and paste it to the address bar. After saving the file, you can use the SkinPlugin module for loading the CSS file to have the user style in effect.
 
 # changes categories
 new=Uusi
@@ -656,7 +664,7 @@ foxtrick.tweaks.copyskilltable=Kopioi taitotaulu leikepöytään (HT Forum -tyyl
 foxtrick.tweaks.copyscoutreport=Kopioi skouttiraportti leikepöytään
 foxtrick.tweaks.scoutreportcopied=Scoutin kommentti on kopioitu leikepöytään.
 foxtrick.tweaks.copyplayerscource=Kopioi HTML-lähdekoodi leikepöytään (hattrick-youthclub.org:lle)
-foxtrick.tweaks.reportcopied=Harjoitus-/skoutti raportti on kopioitu leikepöytään.
+foxtrick.tweaks.trainingreportcopied=Harjoitus raportti on kopioitu leikepöytään.
 foxtrick.tweaks.playersourcecopied=HTML-lähdekoodi on kopioitu leikepöytään.
 foxtrick.tweaks.skilltablecopied=Taitotaulu on kopioitu leikepöytään.
 foxtrick.tweaks.matchidcopied=OtteluID on kopioitu leikepöytään.
@@ -887,7 +895,7 @@ foxtrick.prefs.disableTemporaryLabel=Estä Foxtrick väliaikaisesti
 
 foxtrick.prefs.buttonSave=Tallenna
 foxtrick.prefs.buttonCancel=Peruuta
-foxtrick.prefs.buttonReset=Resetoi
+foxtrick.prefs.buttonExample=Resetoi
 foxtrick.prefs.buttonCustomize=Kustomoi
 foxtrick.prefs.buttonCleanupBranch=Palauta oletukset
 foxtrick.prefs.buttonDisableAll=Hylkää kaikki
