locale/zh: updated to r5404.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5405 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/zh/foxtrick.properties
+++ b/content/locale/zh/foxtrick.properties
@@ -1,7 +1,14 @@
 # @lang chinese/zh
 # @encoding utf-8
-# @revision r5336
+# @revision r5404
 # @translator ryanli(8342420)
+
+# Hints:
+# translate the right side of the = sign.
+# don't use " in your translations.
+# the left side are idenitifiers for internal foxtrick use. leave them unchange
+# sentences starting with # are comments. leave them unchanged
+
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
@@ -64,6 +71,7 @@ foxtrick.StaffMarker.manager.desc=在球队页面高亮
 foxtrick.StaffMarker.own.desc=自定义标记 (例子: userId=1000 userId=1001 style='color:yellow !important;' userId=1002 style='background-color:yellow;')
 foxtrick.StaffMarker.flag.desc=在选择框中给用户添加旗帜
 foxtrick.ForumYouthIcons.desc=显示用于青年队的链接条 (同样适用于邮件, 新闻通告, 以及访客记录)
+foxtrick.ForumYouthIcons.q.desc=添加引用的图标
 foxtrick.ForumYouthIcons.user_id.desc=添加用户 ID 的图标
 foxtrick.ForumYouthIcons.kit_id.desc=添加队服 ID 的图标
 foxtrick.ForumYouthIcons.article_id.desc=添加文章 ID 的图标
@@ -76,7 +84,7 @@ foxtrick.ForumYouthIcons.youth_match.desc=添加青年比赛 ID 的图标
 foxtrick.ForumYouthIcons.youth_series.desc=添加青年联赛 ID 的图标
 foxtrick.ForumYouthIcons.enlarge_input.desc=增大文本框以更好地输入
 foxtrick.ForumYouthIcons.pre.desc=添加“pre”格式的图标
-foxtrick.ForumYouthIcons.table.desc=添加表格的图标
+foxtrick.ForumYouthIcons.table.desc=添加表格的图标, 自定义的分隔符为正则表达式形式.
 foxtrick.FormatPostingText.desc=将FoxTrick的HT-ML标签转换为HTML标签 (即使用<pre>元素)
 foxtrick.CopyPostID.desc=提供复制帖子 ID 的链接
 foxtrick.CopyPostID.AddCopyIcon.desc=在帖子 ID 前添加一个复制帖子 ID 的按钮
@@ -141,8 +149,10 @@ foxtrick.MarkUnread.desc=添加一个从本帖开始标记为未读的链接
 foxtrick.ForumNextAndPrevious.desc=如果论坛帖子中的“下一页”与“上一页”不可用, 就将它们移除
 foxtrick.ForumLastPost.desc=跳转到最后一个帖子, 而不是第一个已读帖子
 foxtrick.ForumLastPost.lastpage.desc=跳转到最后一页, 而不是最后一个帖子
-foxtrick.MatchPlayerColouring.desc=在比赛报告页面中根据球员的球队高亮他们. 使用来自球员详细页面的链接时, 只高亮该球员.
+foxtrick.MatchPlayerColouring.desc=在比赛报告页面中根据球员的球队显示不同颜色. 使用来自球员详细页面的链接时, 只高亮该球员.
+foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=以特殊的颜色高亮自己的球员.
 foxtrick.MatchReportFormat.desc=在比赛报告中, 根据比赛事件的不同, 将它们以特别的方式显示.
+foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=以特殊的颜色高亮自己球队的事件
 foxtrick.ForumRedirManagerToTeam.desc=在论坛的链接中将到经理的链接重定向到球队.
 foxtrick.ManagerButtons.desc=在球队与经理页面上添加或更改按钮
 foxtrick.ManagerButtons.GuestBook.desc=添加在访客记录上留言的按钮
@@ -159,17 +169,6 @@ foxtrick.ExtraPlayerInfo.CoachInfo.desc=教练能力和类型
 foxtrick.ExtraPlayerInfo.Flag.desc=将球员的国籍显示为国旗
 foxtrick.PlayerFilters.desc=在球员列表页面显示用于选择球员的下拉框
 foxtrick.HistoryStats.desc=在球队历史页面显示概述
-foxtrick.HistoryStats.season=赛季
-foxtrick.HistoryStats.season.short=赛季
-foxtrick.HistoryStats.cup=杯赛
-foxtrick.HistoryStats.cup.short=杯赛
-foxtrick.HistoryStats.league=联赛
-foxtrick.HistoryStats.league.short=联赛
-foxtrick.HistoryStats.pos=联赛排名
-foxtrick.HistoryStats.pos.short=排名
-foxtrick.HistoryStats.label=历史统计
-foxtrick.HistoryStats.cupwinner=杯赛冠军
-foxtrick.HistoryStats.cupwinner.short=冠军
 foxtrick.LargeFlags.desc=在球员页面上增大原有国旗, 仅当显示球员面貌时有效 (可能导致 GNU/Linux 崩溃)
 foxtrick.GoToPostBox.desc=在论坛页面添加一个输入框, 用于查看 ID 为输入值的框
 foxtrick.TeamSelectBox.desc=用一个选择框取代球员列表. 点击表头可以在列表与选择框之间切换
@@ -382,6 +381,19 @@ foxtrick.ExtraShortcuts.transfers=转会
 foxtrick.ExtraShortcuts.prefs=首选项
 foxtrick.ExtraShortcuts.ftprefs=FoxTrick 首选项
 
+#HistoryStats
+foxtrick.HistoryStats.season=赛季
+foxtrick.HistoryStats.season.short=赛季
+foxtrick.HistoryStats.cup=杯赛
+foxtrick.HistoryStats.cup.short=杯赛
+foxtrick.HistoryStats.league=联赛
+foxtrick.HistoryStats.league.short=联赛
+foxtrick.HistoryStats.pos=联赛排名
+foxtrick.HistoryStats.pos.short=排名
+foxtrick.HistoryStats.label=历史统计
+foxtrick.HistoryStats.cupwinner=杯赛冠军
+foxtrick.HistoryStats.cupwinner.short=冠军
+
 # YouthPromoteDays
 foxtrick.youthpromotedays.prom_d=距离该球员可以提拔至成年队还有
 foxtrick.youthpromotedays.days=天
@@ -469,6 +481,7 @@ ForumYouthIcons.youthteamid=插入青年队标签
 ForumYouthIcons.youthmatchid=插入青年比赛标签
 ForumYouthIcons.youthseries=插入青年联赛标签
 #special bbcode, not really youth icons
+ForumSpecialBBCode.q=插入引用
 ForumSpecialBBCode.br=插入换行符
 ForumSpecialBBCode.user=插入用户 ID
 ForumSpecialBBCode.kit=插入队服 ID
@@ -905,7 +918,7 @@ foxtrick.prefs.disableTemporaryLabel=临时禁用
 
 foxtrick.prefs.buttonSave=保存
 foxtrick.prefs.buttonCancel=取消
-foxtrick.prefs.buttonReset=重置
+foxtrick.prefs.buttonExample=样例
 foxtrick.prefs.buttonCustomize=自定义
 foxtrick.prefs.buttonCleanupBranch=还原为默认
 foxtrick.prefs.buttonDisableAll=禁用所有
